# create-uv-project

./: README.md  pyproject.toml
src/create_uv_project/: app.py
