[project]
dependencies = []
description = "Add your description here"
name = "create-uv-project"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[tool.uv]
package = true

[project.scripts]
create-uv-project = "create_uv_project.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
